# build-your-own-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  HYPERSCALE_RAG_ARCHITECTURE.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.github/: CODEOWNERS  DEPLOYMENT.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release-gitops.yml
database/migrations/: env.py
database/migrations/versions/: 20260710_0001_initial.py  20260710_0002_retrieval_request_metrics.py  20260710_0003_evaluation_tables.py
deploy/charts/atlas-rag/: Chart.yaml  README.md  values-local.yaml  values-production.example.yaml  values.schema.json  values.yaml
deploy/docker/: frontend.Dockerfile
deploy/environments/production/: values.yaml
deploy/environments/staging/: values.yaml
design-system/atlas-rag/: MASTER.md
docs/: BRANCHING.md  PENETRATION_TEST_CHECKLIST.md  RELEASE_CHECKLIST.md  RETENTION_POLICY.md  SCALING.md  SECURITY_CONTROLS.md  SETUP.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/components/: app-shell.tsx  auth-provider.tsx  chat-composer.test.tsx  chat-composer.tsx  chat-workspace.tsx  documents-view.tsx  evaluation-view.tsx  ingestion-view.tsx  overview.tsx  ui.tsx
frontend/lib/: api.ts  auth-token.ts  demo-data.ts  evaluation-api.ts  format.ts  sse.test.ts  sse.ts  types.ts
observability/: otel-collector.yaml
observability/alerts/: rag-alerts.yml  security-alerts.yml
observability/dashboards/: infrastructure.json  rag-overview.json  slo-budget.json
operations/runbooks/: cross-tenant-incident.md  ingestion-stalled.md  query-latency-spike.md
scripts/: deploy-aws.sh  quickstart.sh
scripts/benchmark/: generate-test-pdfs.py  locustfile.py
src/rag_platform/: __init__.py  config.py  logging.py  telemetry.py
tests/integration/: test_tenant_isolation.py
tests/unit/: test_auth.py  test_cache.py  test_chunker.py  test_guardrails.py  test_ocr.py  test_parser.py  test_retrieval.py  test_router.py  test_sse.py
(+98 files in other folders)
