[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hyperscale-rag"
version = "0.1.0"
description = "Production-oriented hybrid RAG and agentic AI platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aioboto3>=15.1,<16",
  "aiokafka>=0.12,<1",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "aws-msk-iam-sasl-signer-python>=1.0.2,<2",
  "fastapi>=0.116,<1",
  "greenlet>=3.2,<4",
  "httpx>=0.28,<1",
  "neo4j>=5.28,<7",
  "openai>=1.99,<3",
  "opentelemetry-api>=1.36,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.36,<2",
  "opentelemetry-instrumentation-fastapi>=0.57b0,<1",
  "opentelemetry-instrumentation-httpx>=0.57b0,<1",
  "opentelemetry-instrumentation-sqlalchemy>=0.57b0,<1",
  "opentelemetry-sdk>=1.36,<2",
  "orjson>=3.11,<4",
  "prometheus-client>=0.22,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "PyJWT[crypto]>=2.10,<3",
  "pymupdf>=1.26,<2",
  "python-multipart>=0.0.20,<1",
  "qdrant-client>=1.15,<2",
  "redis[hiredis]>=6.4,<7",
  "sqlalchemy[asyncio]>=2.0.43,<3",
  "structlog>=25.4,<26",
  "tenacity>=9.1,<10",
  "tiktoken>=0.11,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
ml = [
  "onnxruntime>=1.22,<2",
  "sentence-transformers>=5.1,<6",
]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "testcontainers[postgres,redis]>=4.12,<5",
  "types-aioboto3[s3]>=15.1,<16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_platform"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
